<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rv_master_list_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <android.support.v7.widget.CardView
        android:id="@+id/recipe_item_cv"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        card_view:cardCornerRadius="16dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        >
            <LinearLayout
                android:id="@+id/cardview_linear_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/recipe_image_iv"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:textAlignment="center"
                    android:layout_gravity="center|center_vertical"
                    android:textColor="@color/white"
                    android:layout_weight="2"/>
            </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
