<resources>
    <string name="app_name">Baking App</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="ingredients_title">Ingredients:</string>
    <string name="no_ingredients_found">Seems that this meal could be cooked without any ingredients.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reload">Reload</string>
    <string name="appwidget_text">Baking App Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="no_content_tv">There is no recipes to show</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="recipe_image">Recipe image</string>
    <string name="json_parsing_error">JSON parsing error...</string>
    <string name="no_recipe_selected">Please open one of recipes in application first</string>
</resources>
